[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GodotCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/button_ui.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Respawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GodotCard:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GodotCard:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 432, 213 ), Vector2( 432, 213 ) ]
}

[node name="ButtonUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 1 )]

[node name="GodotCard" parent="." instance=ExtResource( 2 )]
rect_pivot_offset = Vector2( 528, 327 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Respawn = SubResource( 1 )

[node name="Respawn" type="Timer" parent="."]
one_shot = true

[connection signal="slideLeft" from="Menu" to="." method="_on_Menu_slideLeft"]
[connection signal="slideUp" from="Menu" to="." method="_on_Menu_slideUp"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Respawn" to="." method="_on_Respawn_timeout"]
